--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,23 @@
 <%- include('partials/header') %>
-<div class="container about mt-5 mb-5">
-    <p>I’m Pritika Giri, a motivated Full Stack Developer and a 7th-semester Bachelor of Science in Computer Science and Information Technology (CSIT) student at ABC College. With a strong foundation in both frontend and backend technologies, I specialize in building dynamic, responsive, and user-focused web applications.
+    <div class="text-center pagetitle" style="font-family: 'Montserrat', sans-serif;">
+        <h3>About Me</h3>
+    </div>
+    <div class="container about mt-5 mb-5">
+        <p>I’m Pritika Giri, a motivated Full Stack Developer and a 7th-semester Bachelor of Science in Computer Science
+            and Information Technology (CSIT) student at ABC College. With a strong foundation in both frontend and
+            backend technologies, I specialize in building dynamic, responsive, and user-focused web applications.
 
-        <br><br>My core technical expertise lies in the MERN stack — MongoDB, Express.js, React, and Node.js — and I’m continually expanding my knowledge by exploring modern development tools, frameworks, and industry best practices. I take pride in writing clean, efficient, and scalable code that solves real-world problems and enhances user experience.
+            <br><br>My core technical expertise lies in the MERN stack — MongoDB, Express.js, React, and Node.js — and
+            I’m continually expanding my knowledge by exploring modern development tools, frameworks, and industry best
+            practices. I take pride in writing clean, efficient, and scalable code that solves real-world problems and
+            enhances user experience.
 
-        <br><br>As a student and aspiring developer, I’m actively seeking opportunities to learn, contribute, and collaborate on impactful projects that push my skills and creativity further. I enjoy blending functionality with visual aesthetics to create intuitive digital experiences.
+            <br><br>As a student and aspiring developer, I’m actively seeking opportunities to learn, contribute, and
+            collaborate on impactful projects that push my skills and creativity further. I enjoy blending functionality
+            with visual aesthetics to create intuitive digital experiences.
 
-        <br><br>I’m always open to new challenges, meaningful collaboration, and opportunities to grow as a developer.</p>
-</div>
-<%- include('partials/footer') %>
+            <br><br>I’m always open to new challenges, meaningful collaboration, and opportunities to grow as a
+            developer.
+        </p>
+    </div>
+    <%- include('partials/footer') %>
