--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-    <footer class="footer py-4">
-      <div class="container">
+    <footer class="footer mt-5 py-4">
+      <div class="container mt-5">
         <div class="icons mb-3">
           <a href="https://github.com/PRITIKA-GIRI"><img src="/images/github.svg" alt="GitHub"></a>
           <a href="https://www.linkedin.com/in/pritika-giri/"><img src="/images/linkedin.svg" alt="LinkedIn"></a>
