--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -1,11 +1,13 @@
 <%- include('partials/header') %>
-
+ <div class="text-center pagetitle" style="font-family: 'Montserrat', sans-serif;">
+        <h3>My Skills</h3>
+    </div>
 <div class="container mt-5 mb-5">
   <div class="row">
 
     <!-- Frontend Card -->
     <div class="col">
-      <div class="card" style="width: 25rem; height:25rem;">
+      <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Frontend</h5>
           <ul class="card-text">
@@ -21,7 +23,7 @@
 
     <!-- Backend Card -->
     <div class="col">
-      <div class="card" style="width: 25rem; height:25rem;">
+      <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Backend</h5>
           <ul class="card-text">
@@ -34,7 +36,7 @@
 
     <!-- Database Card -->
     <div class="col">
-      <div class="card" style="width: 25rem; height:25rem;">
+      <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Database</h5>
           <ul class="card-text">
