--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,48 +1,141 @@
 <%- include('partials/header') %>
-    <div class="container mt-5 mb-5">
-        <div class="row">
+    <div class="text-center pagetitle" style="font-family: 'Montserrat', sans-serif;">
+        <h3>My Projects</h3>
+    </div>
+    <div class="container mt-5 ">
 
-            <!-- Frontend Card -->
-            <div class="col-md-8 col-lg-6 mx-auto">
-                <div class="card custom-card h-100" style="width: 35rem; height:35rem;">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="/images/Blog_login.png" alt="First slide">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 25rem; height: 30rem;">
+                    <div class="card-img-top">
+                        <div id="myGalleryCarousel" class="carousel slide carousel-fade h-100">
+                            <div class="carousel-inner h-100">
+                                <div class="carousel-item active h-100">
+                                    <img src="/images/Blog_page.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_page2.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_login.png" class="d-block w-100" alt="Blog page">
+                                </div>
                             </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/Blog_addContent.png" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/Blog_page.png" alt="Third slide">
-                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-                            data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-                            data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
                     </div>
+
+
                     <div class="card-body">
-                        <h5 class="card-title">Blog App</h5>
-                        <ul class="card-text">
-                        
-                        </ul>
+                        <h5 class="card-title text-center">Blog App</h5>
+                        <p class="card-text mb-5" style="font-size: smaller;">
+                            A full-stack blog app with secure login, dynamic posts, and responsive design using Node.js,
+                            Express, and EJS.
+                        </p>
+
+
+                        <a href="https://www.linkedin.com/feed/update/urn:li:activity:7331738159342391297/"><button
+                                class="viewBtn">View
+                                project</button></a>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col">
+                <div class="card" style="width: 25rem; height: 30rem;">
+                    <div class="card-img-top">
+                        <div id="myGalleryCarousel" class="carousel slide carousel-fade h-100">
+                            <div class="carousel-inner h-100">
+                                <div class="carousel-item active h-100">
+                                    <img src="/images/Blog_page.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_page2.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_login.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+
+
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Blog App</h5>
+                        <p class="card-text" style="font-size: smaller;">
+                            A full-stack blog app with secure login, dynamic posts, and responsive design using Node.js,
+                            Express, and EJS.
+                        </p>
+
+
+                        <a href="https://github.com/PRITIKA-GIRI/Blog-web-application"><button class="viewBtn">View
+                                project</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card" style="width: 25rem; height: 30rem;">
+                    <div class="card-img-top">
+                        <div id="myGalleryCarousel" class="carousel slide carousel-fade h-100">
+                            <div class="carousel-inner h-100">
+                                <div class="carousel-item active h-100">
+                                    <img src="/images/Blog_page.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_page2.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/images/Blog_login.png" class="d-block w-100" alt="Blog page">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#myGalleryCarousel"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+
+
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Blog App</h5>
+                        <p class="card-text" style="font-size: smaller;">
+                            A full-stack blog app with secure login, dynamic posts, and responsive design using Node.js,
+                            Express, and EJS.
+                        </p>
+
+
+                        <a href="https://github.com/PRITIKA-GIRI/Blog-web-application"><button class="viewBtn">View
+                                project</button></a>
                     </div>
                 </div>
             </div>
 
+        </div> -->
 
         </div>
+
     </div>
     <%- include('partials/footer') %>
