--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -6,7 +6,7 @@
   <div class="row">
 
     <!-- Frontend Card -->
-    <div class="col">
+    <div class="col mb-4" >
       <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Frontend</h5>
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Backend Card -->
-    <div class="col">
+    <div class="col mb-4">
       <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Backend</h5>
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Database Card -->
-    <div class="col">
+    <div class="col mb-4">
       <div class="card" style="width: 25rem; height:22rem;">
         <div class="card-body">
           <h5 class="card-title">Database</h5>
