changed college name

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
     </div>
     <div class="container about mt-5 mb-5">
         <p>I’m Pritika Giri, a motivated Full Stack Developer and a 7th-semester Bachelor of Science in Computer Science
-            and Information Technology (CSIT) student at ABC College. With a strong foundation in both frontend and
+            and Information Technology (CSIT) student at Bhaktapur Multiple Campus. With a strong foundation in both frontend and
             backend technologies, I specialize in building dynamic, responsive, and user-focused web applications.
 
             <br><br>My core technical expertise lies in the MERN stack — MongoDB, Express.js, React, and Node.js — and
